Add message requests feature: Send, get all and accept message requests
